# kdo

./: .cursorrules  .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  TEMP.md  brand.md  deny.toml  install.sh  kdo.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml  site.yml
crates/kdo-cli/: Cargo.toml
crates/kdo-cli/examples/: token_benchmark.rs
crates/kdo-cli/src/: bench.rs  main.rs  run.rs  setup.rs
crates/kdo-cli/templates/: bench_tasks.toml
crates/kdo-context/: Cargo.toml
crates/kdo-context/src/: extract.rs  generate.rs  lib.rs
crates/kdo-core/: Cargo.toml
crates/kdo-core/src/: lib.rs
crates/kdo-graph/: Cargo.toml
crates/kdo-graph/src/: discover.rs  hash.rs  lib.rs
crates/kdo-graph/tests/: integration.rs  proptest_pnpm.rs
crates/kdo-mcp/: Cargo.toml
crates/kdo-mcp/src/: guards.rs  lib.rs  profile.rs  server.rs
crates/kdo-resolver/: Cargo.toml
crates/kdo-resolver/src/: anchor.rs  cargo.rs  go.rs  lib.rs  node.rs  python.rs
fixtures/sample-monorepo/: .gitignore  .kdoignore  Anchor.toml  CONTEXT.md  kdo.toml
fixtures/sample-monorepo/common-lib/: CONTEXT.md  Cargo.toml
fixtures/sample-monorepo/common-lib/src/: lib.rs
fixtures/sample-monorepo/programs/vault-program/: CONTEXT.md  Cargo.toml
fixtures/sample-monorepo/programs/vault-program/src/: lib.rs
fixtures/sample-monorepo/sdk/vault-sdk/: CONTEXT.md  package.json  tsconfig.json
fixtures/sample-monorepo/sdk/vault-sdk/src/: index.ts
fixtures/sample-monorepo/tools/vault-tool/: CONTEXT.md  pyproject.toml  vault_tool.py
skills/kdo/: SKILL.md
web/site/: .gitignore  astro.config.mjs  package-lock.json  package.json
web/site/.astro/: data-store.json  settings.json
web/site/public/: install.sh
web/site/src/components/: Agents.astro  CodeBlock.astro  Comparison.astro  ConfigShowcase.astro  Features.astro  Footer.astro  Header.astro  Hero.astro  Install.astro  Terminal.astro
web/site/src/layouts/: Base.astro  Docs.astro
web/site/src/pages/: index.astro
web/site/src/pages/docs/: cli.mdx  config.mdx  getting-started.mdx  index.mdx  mcp.mdx
web/site/src/styles/: global.css
