[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/vivekpal0x/kdo"
authors = ["Vivek Pal"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
petgraph = { version = "0.6", features = ["serde-1"] }
blake3 = "1.5"
ignore = "0.4"
rayon = "1.10"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
miette = { version = "7", features = ["fancy"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-python = "0.21"
anyhow = "1"
indexmap = { version = "2", features = ["serde"] }
walkdir = "2"
tabled = "0.15"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
