[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["fixtures"]

[workspace.package]
version = "0.2.0-alpha.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/vivekpal1/kdo"
homepage = "https://github.com/vivekpal1/kdo"
authors = ["Vivek Pal"]
keywords = ["workspace", "monorepo", "mcp", "context", "polyglot"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
petgraph = { version = "0.6", features = ["serde-1"] }
blake3 = "1.5"
ignore = "0.4"
rayon = "1.10"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
miette = { version = "7", features = ["fancy"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.26"
tree-sitter-rust = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-python = "0.21"
anyhow = "1"
indexmap = { version = "2", features = ["serde"] }
walkdir = "2"
tabled = "0.15"
owo-colors = "4"
indicatif = "0.17"
clap_complete = "4.5"
grep-regex = "0.1"
grep-searcher = "0.1"
globset = "0.4"
rmcp = { version = "0.16.0", features = ["server", "transport-io", "macros"] }
schemars = "0.8"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
