[package]
name = "kdo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kdo"
path = "src/main.rs"

[dependencies]
kdo-core = { path = "../kdo-core" }
kdo-graph = { path = "../kdo-graph" }
kdo-context = { path = "../kdo-context" }
kdo-mcp = { path = "../kdo-mcp" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
miette = { workspace = true }
anyhow = { workspace = true }
tabled = { workspace = true }
