[package]
name = "kdo-cli"
description = "CLI binary for the kdo workspace manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
publish = false

[[bin]]
name = "kdo"
path = "src/main.rs"

[dependencies]
kdo-core = { path = "../kdo-core" }
kdo-graph = { path = "../kdo-graph" }
kdo-context = { path = "../kdo-context" }
kdo-mcp = { path = "../kdo-mcp" }
clap = { workspace = true }
clap_complete = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
miette = { workspace = true }
anyhow = { workspace = true }
tabled = { workspace = true }
owo-colors = { workspace = true }
indicatif = { workspace = true }
rayon = { workspace = true }
ignore = { workspace = true }
