[package]
name = "kdo"
description = "Context-native workspace manager for AI coding agents. Cuts token consumption on polyglot monorepos."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "kdo"
path = "src/main.rs"

[dependencies]
kdo-core = { path = "../kdo-core", version = "=0.1.0-alpha.3" }
kdo-graph = { path = "../kdo-graph", version = "=0.1.0-alpha.3" }
kdo-context = { path = "../kdo-context", version = "=0.1.0-alpha.3" }
kdo-mcp = { path = "../kdo-mcp", version = "=0.1.0-alpha.3" }
clap = { workspace = true }
clap_complete = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
miette = { workspace = true }
anyhow = { workspace = true }
tabled = { workspace = true }
owo-colors = { workspace = true }
indicatif = { workspace = true }
rayon = { workspace = true }
ignore = { workspace = true }
