[package]
name = "kdo-context"
description = "Internal crate for kdo — tree-sitter signature extraction and token-budgeted context generation. Not intended for direct use; API may change without notice."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
kdo-core = { path = "../kdo-core", version = "=0.1.0-alpha.3" }
kdo-graph = { path = "../kdo-graph", version = "=0.1.0-alpha.3" }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-python = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
miette = { workspace = true }
anyhow = { workspace = true }
ignore = { workspace = true }
