[package]
name = "kdo-core"
description = "Internal crate for kdo — core types and errors. Not intended for direct use; API may change without notice."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
