[package]
name = "kdo-graph"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kdo-core = { path = "../kdo-core" }
kdo-resolver = { path = "../kdo-resolver" }
petgraph = { workspace = true }
blake3 = { workspace = true }
ignore = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
miette = { workspace = true }
anyhow = { workspace = true }
indexmap = { workspace = true }
