[package]
name = "kdo-graph"
description = "Workspace dependency graph with discovery, traversal, and content hashing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
kdo-core = { path = "../kdo-core" }
kdo-resolver = { path = "../kdo-resolver" }
petgraph = { workspace = true }
blake3 = { workspace = true }
ignore = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
miette = { workspace = true }
anyhow = { workspace = true }
indexmap = { workspace = true }
