[package]
name = "kdo-mcp"
description = "MCP server exposing workspace intelligence via JSON-RPC over stdio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
kdo-core = { path = "../kdo-core" }
kdo-graph = { path = "../kdo-graph" }
kdo-context = { path = "../kdo-context" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
