[package]
name = "kdo-mcp"
description = "Internal crate for kdo — MCP server exposing workspace intelligence over JSON-RPC/stdio. Not intended for direct use; API may change without notice."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
kdo-core = { path = "../kdo-core", version = "=0.1.0-alpha.2" }
kdo-graph = { path = "../kdo-graph", version = "=0.1.0-alpha.2" }
kdo-context = { path = "../kdo-context", version = "=0.1.0-alpha.2" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
ignore = { workspace = true }
