[package]
name = "kdo-mcp"
description = "Internal crate for kdo — MCP server exposing workspace intelligence over JSON-RPC/stdio. Not intended for direct use; API may change without notice."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
kdo-core = { path = "../kdo-core", version = "=0.2.0-alpha.1" }
kdo-graph = { path = "../kdo-graph", version = "=0.2.0-alpha.1" }
kdo-context = { path = "../kdo-context", version = "=0.2.0-alpha.1" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ignore = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
