[package]
name = "kdo-resolver"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kdo-core = { path = "../kdo-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
miette = { workspace = true }
